# StatisticsForScientists

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bibliography.bib  example.py  examples.py  group_comparison.py  inferential_stats.py  pyproject.toml
.github/: ruff.toml
.github/workflows/: publish.yml  python-audit.yml
doc/: development.md
examples/: correlation_analysis.py  grroups_comparison.py  paper_examples.py
latex/: .gitignore  bibliography.bib  estimands_to_inference_tutorial.tex
statisticsforscientists/: __init__.py  examples.py
stats4science/: __init__.py  inferential_stats.py
tests/: test_inferential_stats.py
