[project]
name = "stats4science"
version = "1.0.0"
description = "Statistical tools for scientists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stats4science"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
