[project]
name = "stats4science"
version = "1.0.0"
description = "Statistical tools for scientists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stats4science"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bump-my-version==1.3.0",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "ruff==0.15.12",
]
